--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "v2.2.0",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@next/bundle-analyzer": "15.1.0",
+    "@next/bundle-analyzer": "^15.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@vercel/speed-insights": "^1.1.0",
@@ -38,6 +38,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "image-size": "^1.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "^15.1.0",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
