--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/eslint-plugin-tailwindcss": "^3",
     "@types/leaflet": "^1",
     "@types/mdx": "^2.0.13",
     "@types/react": "^19.0.1",
@@ -79,8 +80,11 @@
     "cssnano": "^7.0.6",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
