--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": " next build && cross-env NODE_OPTIONS='--experimental-json-modules'  node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
+    "lint": "next lint --fix --dir app --dir components --dir layouts",
     "format": "prettier -w ./app ./components ./layouts"
   },
   "dependencies": {
