--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
+    "prettier-plugin-classnames": "^0.7.5",
+    "prettier-plugin-merge": "^0.7.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "typescript": "^5.7.2"
   },
