--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "^15.1.0",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^4.10.38",
     "pliny": "^0.4.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
