--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "v2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@maptiler/sdk": "^3.0.1",
     "@next/bundle-analyzer": "15.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
@@ -39,6 +40,7 @@
     "image-size": "^1.1.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "maplibre-gl": "^5.0.1",
     "next": "^15.1.0",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
