--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@next/bundle-analyzer": "15.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "@waline/client": "^3.4.2",
     "autoprefixer": "^10.4.20",
