--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
     "image-size": "^1.1.1",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "maplibre-gl": "^5.0.1",
@@ -49,6 +50,7 @@
     "pliny": "^0.4.0",
     "postcss": "^8.4.49",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-h5-audio-player": "^3.9.3",
     "react-hot-toast": "^2.4.1",
@@ -75,6 +77,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/eslint-plugin-tailwindcss": "^3",
+    "@types/js-cookie": "^3",
     "@types/leaflet": "^1",
     "@types/mdx": "^2.0.13",
     "@types/react": "^19.0.1",
